Fix description alignment in add accounts

--- a/dash/App/Add/style/index.styl
+++ b/dash/App/Add/style/index.styl
@@ -315,15 +315,15 @@
   //   border-radius 2px
   //   background var(--ghostA)
 
-  .addAccountItemSummary:before
-    content ''
-    position absolute
-    top 0px
-    left 8px
-    right 8px
-    height 4px
-    border-radius 2px
-    background var(--ghostA)
+  // .addAccountItemSummary:before
+  //   content ''
+  //   position absolute
+  //   top 0px
+  //   left 8px
+  //   right 8px
+  //   height 4px
+  //   border-radius 2px
+  //   background var(--ghostA)
 
   .addAccountItemSummary
     display flex
@@ -335,16 +335,16 @@
     text-transform uppercase
     letter-spacing 1px
     height 50px
-    text-align justify
-    text-align-last center-justify
+    // text-align justify
+    text-align center
     min-height 22px
-    width 100%
-    min-width 100%
+    // width 100%
+    // min-width 100%
     box-sizing border-box
     position absolute
-    top 71px
-    left 0
-    right 0
+    top 91px
+    left 20px
+    right 20px
 
   .addAccountItemFooter:before
     content ''
